2008-09-15  Michael Snyder  <msnyder@vmware.com>

	* gdb.twreverse/consecutive-reverse.exp: New file.
	* gdb.twreverse/consecutive-reverse.c: New file.
	* gdb.twreverse/Makefile.in: Update for make clean.

2008-09-10  Michael Snyder  <msnyder@vmware.com>

	* gdb.twreverse/until-reverse.exp: New file.
	* gdb.twreverse/until-reverse.c: New file.
	* gdb.twreverse/until-reverse1.c: New file.

2008-09-09  Michael Snyder  <msnyder@vmware.com>

	* gdb.twreverse/return2-reverse.c: Rename to:
	* gdb.twreverse/finish-reverse.c: New name of file.
	* gdb.twreverse/*.exp: Sharpen regexps, add $gdb_prompt.

2008-09-07  Hui Zhu  <teawater@gmail.com>

	* Makefile.in: Add "gdb.twreverse" to "ALL_SUBDIRS".
	* gdb.twreverse/Makefile.in: TAB instead of 8 spaces.

2008-09-06  Michael Snyder  <msnyder@vmware.com>

	* gdb.twreverse/watch-reverse.exp: New file.
	* gdb.twreverse/watch-reverse.c: New file.
	* gdb.twreverse/Makefile.in: Add watch-reverse for make clean.
	* gdb.twreverse/step-reverse.exp: Add $gdb_prompt to regexps.

2008-09-06  Michael Snyder  <msnyder@vmware.com>

	* gdb.twreverse/step-reverse.exp: Add $gdb_prompt to regexps.

2008-09-05  Michael Snyder  <msnyder@vmware.com>

	* gdb.twreverse/finish-reverse.exp: New file.
	* gdb.twreverse/return2-reverse.c: New file.
	* gdb.twreverse/Makefile.in: Add return2-reverse for make clean.

2008-09-04  Michael Snyder  <msnyder@vmware.com>

	* gdb.twreverse/return-reverse.exp: New file.
	* gdb.twreverse/return-reverse.c: New file.
	* gdb.twreverse/Makefile.in: Mention return-reverse for make clean.

2008-09-04  Michael Snyder  <msnyder@vmware.com>

	* gdb.twreverse/Makefile.in: Mention step-reverse for make clean.

2008-09-03  Michael Snyder  <msnyder@vmware.com>

	* gdb.twreverse/step-reverse.exp: Add tests for reverse stepi
	thru the return of a function (into callee).
	* gdb.twreverse/step-reverse.c: Ditto.

	* gdb.twreverse/step-reverse.exp: Add tests for reverse stepi
	thru a function call (back to caller).