@@ -1,3 +1,10 @@
+2008-09-16  Michael Snyder  <msnyder@vmware.com>
+
+	* gdb.twreverse/machinestate.exp: New file.
+	* gdb.twreverse/machinestate.c: New file.
+	* gdb.twreverse/machinestate1.c: New file.
+	* gdb.twreverse/Makefile.in: Update for make clean.
+
 2008-09-15  Michael Snyder  <msnyder@vmware.com>
 
 	* gdb.twreverse/consecutive-reverse.exp: New file.
